--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,30 +24,28 @@ jobs:
         run: |
           set -e
           echo "Sending POST to https://reqres.in/api/login ..."
-
+            if [ ! -f api_password.txt ]; then
+        echo "❌ ERROR: api_password.txt not found."
+          exit 1
+            fi
+           api_password=$(tr -d '\r\n' < api_password.txt)
           
           response=$(curl -s -X POST "https://reqres.in/api/login" \
             -H "Content-Type: application/json" \
             -H "x-api-key: reqres-free-v1" \
             -d '{"email":"eve.holt@reqres.in","password":"cityslicka"}')
-
           echo "Raw response: $response"
-
           # JSON
           token=$(python3 -c "import sys, json; d=json.load(sys.stdin); print(d.get('token',''))" <<< "$response")
-
           if [ -z "$token" ]; then
             echo "❌ ERROR: token not found in response."
             exit 1
           fi
-
           echo "✅ Token received: $token"
-
           # output.txt
           echo "$token" > output.txt
           echo "📁 Token saved to output.txt:"
           cat output.txt
-
       - name: Commit and push output.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
