--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
             exit 1
           fi
           echo "✅ Token received."
-          echo "$token" > output.txt
+          echo "$token" >> output.txt
           echo "📁 Token saved to output.txt"
           cat output.txt
 
