--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,41 +20,75 @@ jobs:
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
 
-      - name: POST to reqres API and capture token
+      - name: POST commit payload to ServiceNow API and capture response
         run: |
           set -e
-          echo "Sending POST to https://reqres.in/api/login ..."
-          # Read API password from a file in the repository (api_password.txt).
-          # The file should contain the password only (one line). We trim whitespace/newlines.
+          echo "Preparing payload for ServiceNow API..."
+          # Read API password from a file in the repository (secrets.txt).
+          # The file should contain the password only (one line). We trim whitespace.
           if [ ! -f secrets.txt ]; then
-            echo "❌ ERROR: api_password.txt not found."
+            echo "❌ ERROR: secrets.txt not found."
             exit 1
           fi
           api_password=$(tr -d '\r\n' < secrets.txt)
-          # Do NOT print the password to logs.
-          
-          response=$(curl -s -X POST "https://reqres.in/api/login" \
+          user="admin"
+
+          # Determine changed files from the commit that triggered the workflow
+          if [ -n "${GITHUB_SHA:-}" ]; then
+            if git rev-parse "${GITHUB_SHA}^" >/dev/null 2>&1; then
+              changed_files=$(git diff --name-only "${GITHUB_SHA}^" "${GITHUB_SHA}")
+            else
+              changed_files=$(git diff --name-only "${GITHUB_SHA}")
+            fi
+          else
+            changed_files=$(git ls-files)
+          fi
+
+          # Build JSON payload with commit sha and contents of changed files
+          payload='{ "commit_sha": "'"${GITHUB_SHA:-unknown}"'", "actor":"'"${GITHUB_ACTOR:-unknown}"'", "files": ['
+          first=true
+          while IFS= read -r file; do
+            [ -z "$file" ] && continue
+            if [ ! -f "$file" ]; then
+              continue
+            fi
+            content=$(python3 - <<'PY' "$file"
+                 import sys, json
+                  p = sys.argv[1]
+try:
+    with open(p, 'r', encoding='utf-8') as f:
+        data = f.read()
+except Exception:
+    data = ""
+print(json.dumps(data))
+PY
+"$file")
+            if [ "$first" = true ]; then
+              first=false
+            else
+              payload="$payload,"
+            fi
+            payload="$payload{\"path\":\"$(printf '%s' "$file" | sed 's/"/\\"/g')\",\"content\":$content}"
+          done <<< "$changed_files"
+          payload="$payload] }"
+
+          # Send payload to ServiceNow API using basic auth (user + password from file)
+          echo "Sending payload to ServiceNow API..."
+          response=$(curl -s -w "\n%{http_code}" -X POST "https://dev203047.service-now.com/api/1436129/importupdateset/getxmlfile" \
             -H "Content-Type: application/json" \
-            -H "x-api-key: reqres-free-v1" \
-            -d "{\"email\":\"eve.holt@reqres.in\",\"password\":\"${api_password}\"}")
-          
-          echo "Raw response: $response"
-          token=$(python3 -c "import sys, json; d=json.load(sys.stdin); print(d.get('token',''))" <<< "$response")
-          if [ -z "$token" ]; then
-            echo "❌ ERROR: token not found in response."
+            -u "${user}:${api_password}" \
+            -d "$payload")
+
+          http_code=$(echo "$response" | tail -n1)
+          body=$(echo "$response" | sed '$d')
+
+          echo "ServiceNow API HTTP status: $http_code"
+          echo "Response body:"
+          echo "$body"
+
+          if [ "${http_code}" -ge 200 ] && [ "${http_code}" -lt 300 ]; then
+            echo "✅ Successfully sent payload to ServiceNow."
+          else
+            echo "❌ Failed to send payload to ServiceNow (status $http_code)."
             exit 1
           fi
-          echo "✅ Token received."
-          echo "$token" >> output.txt
-          echo "📁 Token saved to output.txt"
-          cat output.txt
-
-      - name: Commit and push output.txt
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add output.txt
-          git commit -m "Add output.txt with token from reqres API" || echo "No changes to commit"
-          git push
